# cs-self-learning

./: .gitignore  MEMO.md  README.md  TODO.md
01.Languages/C&C++/: README.md
01.Languages/Python/: README.md
02.Network/01.Notes/: 计算机网络.xmind
03.Operating_System/01.Notes/: Linux学习笔记.md
05.Tools/01.Markdown/: Markdown常用语法.md
05.Tools/04.Maven/: IDEA Maven项目编译或启动报错解决方法.md
06.Design Pattern/01.Notes/: 设计模式.md
07.Backend/06.References/: 网络到分布式.xmind
08.Big_Data/01.Learning_Route/: 大数据开发学习路线.md
09.AI/01.Learning_Route/: 待看帖子.md  练手项目.md
09.AI/06.AI_Infra/: README.md  基本概念.md
09.AI/06.MLSys/: README.md
09.AI/07.LLM/: README.md
09.AI/08.Notes/: 基本概念.md
10.Employment/01.Employment Information/: 2024年IT行业发展情况分析.md
10.Employment/01.Employment_Information/: 2024年大模型推理岗位就业情况.md
11.Research/01.Notes/: 科研方法.md
12.Open_Source/: README.md
12.Open_Source/01.Notes/: 开源常用黑话.md  开源术语.md  开源社区交流话术.md  提交PR注意事项.md  计算开源外部账号运营方案.md  贡献开源注意事项.md
AI/: README.md  TODO.md
AI-/Roadmap/: Projects.md
AI/AI System/: AI System学习路线.md  INVIDIA GPU架构&CUDA平台入门学习.md
AI/AI_Infra/: wengjiayi.md
AI/AI_Infra/HPC/CANN/Posts/Ascend-aclnn算子开发入门/codes/add/: CMakeLists.txt
AI/Diffusion/: Basic.md  Inference.md  README.md
AI/LLM/: Projects.md  README.md
AI/Others/: AI Infra中“die”的定义与意义.md  PyTorch CUDA图原理与用法详解.md  分布式多卡推理通信域建立与动态通信域解析.md  多模态大模型MRoPE作用解析.md  大模型推理中的动态图与静态图解析.md
AI/机器学习/: 机器学习.md
AI/算力/: 学习路线.md  (+2 more)
Employment/: 2024年大模型推理岗位就业情况.md  大模型推理加速岗位学习路线.md  腾讯社招岗位.md  阿里社招岗位.md
Open_Source/: Agent滥用应对方法.md  MEMO.md  如何快速上手一个开源项目.md
Posts/: TODO.md
(+2054 files in other folders)
